chore(movies): update dependencies for fix start

--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "17.0.2",
-    "@angular/common": "17.0.2",
-    "@angular/core": "17.0.2",
-    "@angular/platform-browser": "17.0.2",
-    "@angular/platform-browser-dynamic": "17.0.2",
-    "@angular/platform-server": "17.0.2",
-    "@angular/router": "17.0.2",
+    "@angular/animations": "17.1.1",
+    "@angular/common": "17.1.1",
+    "@angular/core": "17.1.1",
+    "@angular/platform-browser": "17.1.1",
+    "@angular/platform-browser-dynamic": "17.1.1",
+    "@angular/platform-server": "17.1.1",
+    "@angular/router": "17.1.1",
     "@angular/ssr": "17.0.0",
-    "@angular/service-worker": "17.0.2",
+    "@angular/service-worker": "17.1.1",
     "@push-based/ngx-fast-svg": "^0.5.0",
     "@rx-angular/cdk": "^16.0.0",
     "@rx-angular/eslint-plugin": "^1.0.0",
@@ -43,16 +43,16 @@
     "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.0.0",
-    "@angular-eslint/builder": "^17.0.1",
-    "@angular-eslint/eslint-plugin": "17.0.1",
-    "@angular-eslint/eslint-plugin-template": "17.0.1",
-    "@angular-eslint/schematics": "^17.0.1",
-    "@angular-eslint/template-parser": "17.0.1",
+    "@angular-devkit/build-angular": "17.1.1",
+    "@angular-eslint/builder": "^17.1.1",
+    "@angular-eslint/eslint-plugin": "17.1.1",
+    "@angular-eslint/eslint-plugin-template": "17.1.1",
+    "@angular-eslint/schematics": "^17.2.1",
+    "@angular-eslint/template-parser": "17.1.1",
     "@angular/cli": "^17.0.0",
-    "@angular/compiler": "17.0.2",
-    "@angular/compiler-cli": "17.0.2",
-    "@angular/language-service": "17.0.2",
+    "@angular/compiler": "17.1.1",
+    "@angular/compiler-cli": "17.1.1",
+    "@angular/language-service": "17.1.1",
     "@cloudflare/workers-types": "^4.20230511.0",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
@@ -60,15 +60,15 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@miniflare/tre": "^3.0.0-next.13",
-    "@nx/angular": "17.1.1",
-    "@nx/devkit": "17.1.1",
-    "@nx/esbuild": "17.1.1",
-    "@nx/eslint-plugin": "17.1.1",
-    "@nx/jest": "17.1.1",
-    "@nx/js": "17.1.1",
-    "@nx/node": "17.1.1",
-    "@nx/webpack": "17.1.1",
-    "@nx/workspace": "17.1.1",
+    "@nx/angular": "17.2.8",
+    "@nx/devkit": "17.2.8",
+    "@nx/esbuild": "17.2.8",
+    "@nx/eslint-plugin": "17.2.8",
+    "@nx/jest": "17.2.8",
+    "@nx/js": "17.2.8",
+    "@nx/node": "17.2.8",
+    "@nx/webpack": "17.2.8",
+    "@nx/workspace": "17.2.8",
     "@push-based/user-flow": "^0.20.2",
     "@push-based/user-flow-nx-plugin": "^0.1.1",
     "@rx-angular/import-graph-visualizer": "^0.2.0",
@@ -140,11 +140,10 @@
     },
     "@angular-eslint/schematics": {
       "@angular/cli": "^17.0.0",
-      "@nguniversal/common": "^17.0.0",
       "@angular-devkit/build-angular": "^17.0.0,"
     },
     "@push-based/user-flow-nx-plugin": {
-      "@nx/devkit@": "^17.0.2"
+      "@nx/devkit@": "17.2.8"
     }
   }
 }
